syntax = "proto3";

package auth;

option go_package = "github.com/popeskul/awesome-messanger/services/auth/proto";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Refresh (RefreshRequest) returns (RefreshResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  string message = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 1;
}

message RefreshRequest {
  string old_token = 1;
}

message RefreshResponse {
  string new_token = 1;
}
